# rebus-geo-rost

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  todo   todo.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app_templates/: urls.py
app_templates/resources/: simple.py
geo_data/: __init__.py  admin.py  urls.py
geo_data/fixtures/: add_data.json  geo_data.json  initial_data.json  initial_kazan.json  initial_settings.json  initial_yaroslavl.json
geo_data/migrations/: 0001_initial.py  0002_auto_20190706_1714.py  0002_auto_20200321_1825.py  0002_auto_20210212_1317.py  0003_auto_20200613_2322.py  0003_auto_20210502_2127.py  0003_fixtures.py  0003_point.py  0004_auto_20190707_0328.py  0004_auto_20200614_2156.py  0004_auto_20210502_2308.py  0005_value.py  0006_auto_20190707_0717.py  0006_auto_20190707_0834.py  0007_category.py  0007_category_geoobject.py  (+1 more)
public/: index.html
rebus_geo_rost/: middleware.py  settings.py  urls.py  wsgi.py
rebus_hackaton/: middleware.py  settings.py  urls.py  wsgi.py
src/: App.vue  main.js
static/: about.js  app.js  index.html
templates/: index.html
utils/: base_parser.py  base_point_creator.py  bus_station_parser.py  culture_parser.py  decode_address.py  education_parser.py  generate_poligons.py  generate_polygons.py  hospital_parser.py  parse_building_approval.py  parse_stop_place.py  parse_trash.py  post_office_parser.py  sports_ground_parser.py  waste_points_parser.py  yandex_decoder_wrapper.py
(+42 files in other folders)
