[tool.poetry]
name = "rebus-geo-rost"
version = "0.1.0"
description = ""
authors = ["andruwwwka <andruwwwka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
drf-yasg = "^1.20.0"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
